Trying to get SD settings save working

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,8 +37,15 @@ custom_ucnc_modules = ${webconfig.custom_ucnc_modules}
 build_flags = 
 	${webconfig.build_flags}
 	; add your custom build flags
+
+  -DENABLE_DEBUG_STREAM
+; -DDISABLE_MULTISTREAM_SERIAL
+  ; -DDETACH_UART_FROM_MAIN_PROTOCOL
+  ; -DDEBUG_STREAM="&usb_serial_stream"
+  -DENABLE_MODBUS_VERBOSE
+
 lib_deps = 
 	${webconfig.lib_deps}
 	; add you custom library dependencies
 
-
+upload_port = /run/media/matt/BIGCNC
