--- a/uCNC/webconfig.ini
+++ b/uCNC/webconfig.ini
@@ -1,6 +1,6 @@
 [webconfig]
-build_flags =
-custom_ucnc_modules_url =
-custom_ucnc_modules =
-lib_deps =
-board =
+build_flags = 
+custom_ucnc_modules_url = https://github.com/Paciente8159/uCNC-modules/archive/refs/heads/master.zip
+custom_ucnc_modules = m17_m18, m42, m62_m65, m67_m68, sd_card_v2, tmc_driver
+lib_deps = 
+board = 
